# documentor

./: .env.example  .gitignore  README.md  documentor-lock.yaml  documentor.yaml  pyproject.toml  readme.md
.github/workflows/: test.yml
docs/: config.md  style.md  tests.md  usage.md
src/documentor/cli/: app.py  context.py  utils.py
src/documentor/cli/commands/: docs.py  manage.py  setup.py
src/documentor/core/: analyzer.py  config.py  parser.py  state.py  writer.py
src/documentor/llm/: chains.py  client.py
src/documentor/llm/chains/: __init__.py  edit.py  expand.py  generate.py  plan.py  sync.py
src/documentor/llm/chains/agent/: __init__.py  edit.py  expand.py  generate.py  plan.py  sync.py  tools.py
src/documentor/llm/prompts/: __init__.py  common.md  common.py  edit.md  edit.py  expand.md  expand.py  generate.md  generate.py  infer.md  infer.py  plan.md  plan.py  sync.md  sync.py
src/documentor/utils/style/: __init__.py
src/documentor/utils/style/templates/: functional.md  handoff.md
src/documentor/utils/style_templates/: research.md
tests/: test_agent.py  test_cli.py  test_core.py  test_llm.py  test_utils.py
