[project]
name = "documentor"
version = "1.0.0"
description = "A CLI tool for automatic documentation generation and management"
authors = [{ name = "Yusuf Hussein", email = "me@yusufhussein.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.1",
    "questionary>=2.0.1",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    "pydantic>=2.9.2",
    "pyyaml>=6.0.2",
    "pathspec>=0.12.1",
]

[project.scripts]
documentor = "documentor.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/documentor"]
